force-app/main/default/objects/new_CMT__mdt/new_CMT__mdt.object-meta.xml
<CustomObject>
    <label>new CMT</label>
    <description></description>
    <pluralLabel>new CMTS</pluralLabel>
</CustomObject>