force-app/main/default/objects/new_CMT__mdt/fields/Almog_MDT_Relationship_Field__c.field-meta.xml
<CustomField>
    <fullName>Almog_MDT_Relationship_Field__c</fullName>
    <label>Almog MDT Relationship Field</label>
    <type>MetadataRelationship</type>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipName>new_CMTS</relationshipName>
    <relationshipLabel>new_CMTS</relationshipLabel>
</CustomField>