force-app/main/default/objects/new_CMT__mdt/fields/Is_Cool__c.field-meta.xml
<CustomField>
    <fullName>Is_Cool__c</fullName>
    <label>Is Cool</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>