force-app/main/default/objects/new_CMT__mdt/fields/MDT_Relationship_Field_Definition__c.field-meta.xml
<CustomField>
    <fullName>MDT_Relationship_Field_Definition__c</fullName>
    <label>MDT Relationship Field Definition</label>
    <type>MetadataRelationship</type>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipName>new_CMTS</relationshipName>
    <metadataRelationshipControllingField>new_CMT__mdt.Almog_MDT_Relationship_Field__c</metadataRelationshipControllingField>
    <relationshipLabel>new_CMTS</relationshipLabel>
</CustomField>