force-app/main/default/objects/new_CMT__mdt/fields/MDT_Relationship_Particle__c.field-meta.xml
<CustomField>
    <fullName>MDT_Relationship_Particle__c</fullName>
    <label>MDT_Relationship_Particle</label>
    <type>MetadataRelationship</type>
    <required>true</required>
    <referenceTo>EntityParticle</referenceTo>
    <relationshipName>new_CMTS</relationshipName>
    <metadataRelationshipControllingField>new_CMT__mdt.Almog_MDT_Relationship_Field__c</metadataRelationshipControllingField>
    <relationshipLabel>new_CMTS</relationshipLabel>
</CustomField>