force-app/main/default/objects/new_CMT__mdt/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <type>Text</type>
    <length>100</length>
</CustomField>