force-app/main/default/objects/new_CMT__mdt/validationRules/Invalid_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Name</fullName>
    <active>true</active>
    <errorConditionFormula>Name__c = &quot;invalidchange&quot;</errorConditionFormula>
    <errorMessage>Name is invalid</errorMessage>
</ValidationRule>