force-app/main/default/objects/new_CMT__mdt/validationRules/Valid_Profile_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Profile_Name</fullName>
    <active>true</active>
    <errorConditionFormula>$Profile.Name  = &quot;Invalid2&quot;</errorConditionFormula>
    <errorMessage>Profile name must be valid.</errorMessage>
</ValidationRule>